# plaque-risk-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  new-fullstack.md  pyproject.toml  readmi_synthetic_data.md  readmi_synthetic_data_ru.md  readmi_training_pipeline.md  readmi_training_pipeline_ru.md  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  readmi_synhetic_data.md  readmi_training.md
backend/data/: baseline.csv  features.csv  features.md  resampled_data_adasyn.csv  resampled_data_over.csv  resampled_data_smote.csv  resampled_data_under.csv  source.csv
backend/models/adverse_outcome/: leaderboard.csv  learner.pkl  metadata.json  model.onnx  model_metadata.json  training_info.json
backend/models/adverse_outcome/models/: trainer.pkl
backend/models/tabpfn_adasyn/: feature_importance.xlsx  leaderboard.xlsx  metadata.json
backend/models/tabpfn_adasyn/models/: trainer.pkl
backend/models/tabpfn_smote/: feature_importance.xlsx  leaderboard.xlsx  learner.pkl  predictor.pkl
backend/models/tabpfnv2_model/: learner.pkl  metadata.json  predictor.pkl
backend/models/tabpfnv2_model/models/: trainer.pkl
backend/reports/: product_spec.md  synthetic_data.md  training.md
backend/scripts/: process_data.py
backend/src/ml/: __init__.py  eval.py  inference.py  train.py
backend/src/pipelines/: evaluate.py  train.py
backend/src/plaque_predictors/: main.py
backend/src/plaque_risk_explorer/: executive_summary.py  main.py
backend/src/scripts/: __init__.py  build.py  evaluate.py  train.py
(+777 files in other folders)
